--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>challenge</title>
+    <title>Encriptador</title>
 </head>
 <body>
     <h1 class="title">Encriptador de mensajes</h1>
