--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     
-    <title>Encriptador</title>
+    <title>Encriptador - live</title>
 </head>
 <body>
     <h1 class="title">Encriptador de mensajes</h1>
